--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,8 @@
-{}
+{
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "printWidth": 120,
+  "endOfLine": "auto",
+  "semi": true
+}
