--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@bytescale/upload-widget-react": "^4.17.0",
     "@langchain/community": "^0.0.21",
     "@langchain/openai": "^0.0.13",
     "@next/bundle-analyzer": "^13.4.19",
@@ -24,14 +25,19 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "langchain": "^0.1.8",
     "next": "14.0.1",
+    "pdf-parse": "^1.1.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "zlib": "^1.0.5",
     "zod": "^3.22.3",
     "zod-to-json-schema": "^3.21.4"
   },
