--- a/package.json
+++ b/package.json
@@ -13,36 +13,50 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@bytescale/upload-widget-react": "^4.17.0",
-    "@langchain/community": "^0.0.21",
-    "@langchain/openai": "^0.0.13",
-    "@next/bundle-analyzer": "^13.4.19",
+    "@aws-sdk/client-s3": "^3.741.0",
+    "@aws-sdk/s3-request-presigner": "^3.741.0",
+    "@bytescale/upload-widget-react": "^4.19.0",
+    "@langchain/community": "^0.3.25",
+    "@langchain/core": "^0.3.31",
+    "@langchain/langgraph": "^0.2.41",
+    "@langchain/openai": "^0.3.17",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/supabase-js": "^2.32.0",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "ai": "^2.1.28",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "ai": "^3.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "langchain": "^0.3.11",
+    "lucide-react": "^0.473.0",
+    "next": "^15.1.5",
+    "next-themes": "^0.4.4",
+    "pdf-parse": "^1.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^9.1.3",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-stick-to-bottom": "^1.0.44",
+    "vaul": "^1.1.2",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.2"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "langchain": "^0.1.8",
-    "next": "14.0.1",
-    "pdf-parse": "^1.1.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.3",
+    "prettier": "^3.4.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zlib": "^1.0.5",
-    "zod": "^3.22.3",
-    "zod-to-json-schema": "^3.21.4"
-  },
-  "devDependencies": {
-    "prettier": "3.0.0"
+    "typescript": "5.1.6"
   },
   "resolutions": {
     "@langchain/core": "0.1.18"
